fix: fix shortcut generation